[gd_scene load_steps=23 format=3 uid="uid://bhng7tkgfd6cv"]

[ext_resource type="Script" path="res://scripts/Holder-heath.gd" id="1_3kwfw"]
[ext_resource type="Texture2D" uid="uid://c1e8o8y6eyx37" path="res://assets/Mini FX, Items & UI/Mini UI/Health_Indicator_Black_Outline (8 x 8).png" id="1_ma67k"]
[ext_resource type="FontFile" uid="uid://chs3mplad2uu4" path="res://fonts/Minecraft.ttf" id="1_yw8py"]
[ext_resource type="Script" path="res://scripts/score.gd" id="2_raogn"]
[ext_resource type="Script" path="res://scripts/recursos.gd" id="3_16yfl"]
[ext_resource type="Texture2D" uid="uid://bhufw65r3yrv" path="res://assets/recycle_items.png" id="3_718bt"]
[ext_resource type="Script" path="res://scripts/countdown.gd" id="4_5rxvo"]
[ext_resource type="Texture2D" uid="uid://d2nq3g1x1m2ir" path="res://assets/Seeds Bag/seeds_bag.png" id="5_0q2ms"]
[ext_resource type="Script" path="res://scripts/Game_over.gd" id="5_m6tyf"]
[ext_resource type="Texture2D" uid="uid://bo5lgu4u11sov" path="res://assets/ProgressBar/All-6.png.png" id="6_gb1cy"]
[ext_resource type="Texture2D" uid="uid://bnxvlp4yeia66" path="res://assets/ProgressBar/All-1.png.png" id="7_jnawe"]
[ext_resource type="Script" path="res://scripts/Sementes.gd" id="8_stv3h"]
[ext_resource type="Texture2D" uid="uid://cb8x55p2fhy40" path="res://assets/ProgressBar/earth.png" id="8_vmfvx"]
[ext_resource type="Script" path="res://scripts/received_item_HUD.gd" id="9_fo2ts"]
[ext_resource type="AudioStream" uid="uid://de10x5nq6xqcu" path="res://sounds/GameOver_joshuuu.ogg" id="13_8lpei"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j6ge5"]
atlas = ExtResource("1_ma67k")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_70v3g"]
atlas = ExtResource("1_ma67k")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_13w3x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6ge5")
}],
"loop": true,
"name": &"fill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70v3g")
}],
"loop": true,
"name": &"hollow",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_egxhu"]
font = ExtResource("1_yw8py")
font_size = 24
font_color = Color(0.296875, 0.683594, 0.3125, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2ygr1"]
font = ExtResource("1_yw8py")
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_17ufp"]
font = ExtResource("1_yw8py")
font_size = 64

[sub_resource type="CanvasTexture" id="CanvasTexture_ptav3"]

[node name="HUD" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
offset_left = -92.0
offset_right = 1200.0
offset_bottom = 48.0

[node name="Holder-heath" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.01
anchor_right = 0.172
anchor_bottom = 0.066
offset_left = 0.48
offset_top = 3.0
offset_right = -0.144012
offset_bottom = 0.231998
script = ExtResource("1_3kwfw")

[node name="Heath_1" type="AnimatedSprite2D" parent="Holder-heath"]
position = Vector2(35, 18)
scale = Vector2(5.14275, 5.09627)
sprite_frames = SubResource("SpriteFrames_13w3x")
animation = &"fill"

[node name="Heath_2" type="AnimatedSprite2D" parent="Holder-heath"]
position = Vector2(75, 18)
scale = Vector2(5.14275, 5.09627)
sprite_frames = SubResource("SpriteFrames_13w3x")
animation = &"fill"

[node name="Heath_3" type="AnimatedSprite2D" parent="Holder-heath"]
position = Vector2(115, 18)
scale = Vector2(5.14275, 5.09627)
sprite_frames = SubResource("SpriteFrames_13w3x")
animation = &"fill"

[node name="Holder-Score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 941.0
offset_right = 981.0
offset_bottom = 40.0

[node name="score" type="Label" parent="Holder-Score"]
layout_mode = 0
offset_left = -151.0
offset_top = 1.0
offset_right = 179.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0.296875, 0.683594, 0.3125, 1)
text = "Score"
label_settings = SubResource("LabelSettings_egxhu")
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("2_raogn")

[node name="Holder-item_segurado" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Plastico" type="Sprite2D" parent="Holder-item_segurado"]
position = Vector2(77.6126, 110.808)
scale = Vector2(2, 2)
texture = ExtResource("3_718bt")
region_enabled = true
region_rect = Rect2(0, 16, 19, 48)
script = ExtResource("3_16yfl")

[node name="Papel" type="Sprite2D" parent="Holder-item_segurado"]
position = Vector2(77.6126, 110.808)
scale = Vector2(2, 2)
texture = ExtResource("3_718bt")
region_enabled = true
region_rect = Rect2(97, 10, 53, 53)
script = ExtResource("3_16yfl")
type = 2

[node name="Metal" type="Sprite2D" parent="Holder-item_segurado"]
position = Vector2(77.6126, 110.808)
scale = Vector2(2, 2)
texture = ExtResource("3_718bt")
region_enabled = true
region_rect = Rect2(328, 21, 25, 43)
script = ExtResource("3_16yfl")
type = 3

[node name="Vidro" type="Sprite2D" parent="Holder-item_segurado"]
position = Vector2(77.6126, 110.808)
scale = Vector2(2, 2)
texture = ExtResource("3_718bt")
region_enabled = true
region_rect = Rect2(242, 10, 20, 53)
script = ExtResource("3_16yfl")
type = 4

[node name="Holder-Contagem_Regressiva" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1089.0
offset_top = 163.0
offset_right = 1136.0
offset_bottom = 474.0

[node name="Label" type="Label" parent="Holder-Contagem_Regressiva"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1100.0
offset_top = 152.0
offset_right = 1139.0
offset_bottom = 190.0
label_settings = SubResource("LabelSettings_2ygr1")
script = ExtResource("4_5rxvo")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Holder-Contagem_Regressiva"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -2.564
anchor_top = 2.29
anchor_right = 2.682
anchor_bottom = 7.013
offset_left = 0.0200043
offset_top = -712.19
offset_right = -256.51
offset_bottom = -992.077
scale = Vector2(9.01518, 7.08499)
max_value = 60.0
step = 0.5
fill_mode = 3
texture_under = ExtResource("6_gb1cy")
texture_progress = ExtResource("7_jnawe")

[node name="earth" type="Sprite2D" parent="Holder-Contagem_Regressiva"]
texture_filter = 1
position = Vector2(24, 6)
scale = Vector2(2, 2)
texture = ExtResource("8_vmfvx")

[node name="Game_over" type="Control" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_m6tyf")

[node name="game_over" type="Label" parent="Game_over"]
layout_mode = 0
offset_left = 3.0
offset_top = 273.0
offset_right = 1148.0
offset_bottom = 376.0
text = "O MUNDO ENTROU EM COLAPSO"
label_settings = SubResource("LabelSettings_17ufp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Game_over"]
modulate = Color(0, 0, 0, 0.494118)
show_behind_parent = true
position = Vector2(576.5, 324.75)
scale = Vector2(1149, 110.5)
texture = SubResource("CanvasTexture_ptav3")
region_rect = Rect2(0, 0, 50, 0)

[node name="GameoverFX" type="AudioStreamPlayer" parent="Game_over"]
stream = ExtResource("13_8lpei")
volume_db = -20.0

[node name="holder-sementes" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.03
anchor_top = 0.094
anchor_right = 0.122
anchor_bottom = 0.255
offset_left = 0.439999
offset_top = 0.0879974
offset_right = -0.544006
offset_bottom = -0.240021
script = ExtResource("8_stv3h")

[node name="Sementes" type="Sprite2D" parent="holder-sementes"]
position = Vector2(47, 52)
scale = Vector2(2, 2)
texture = ExtResource("5_0q2ms")
region_enabled = true
region_rect = Rect2(14, 14, 35, 49)

[node name="received_item" type="Label" parent="."]
offset_left = 447.0
offset_right = 670.0
offset_bottom = 48.0
text = "Lixo coletado 0/20"
label_settings = SubResource("LabelSettings_egxhu")
vertical_alignment = 1
script = ExtResource("9_fo2ts")
